Add CI workflow to build + smoke-test java/Dockerfile
Catches jlink module errors (a --add-modules typo has broken this
image before) at PR time instead of at djava's first-use build.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_018ftYp7Y9e2iB2jKU4eqGmG